Bug 156707 - FORMCONTROLS: Textboxes will be created with flat Border - 3D won't be shown after reopening Document
Summary: FORMCONTROLS: Textboxes will be created with flat Border - 3D won't be shown ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: reverted target:26.8.0
Keywords: bibisected, bisected, regression
: 156697 157970 162085 163843 (view as bug list)
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2023-08-10 09:01 UTC by Robert Großkopf
Modified: 2026-03-01 19:19 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Controls, created in LO 7.6.0.2 - default for textboxes will always be flat border (24.00 KB, application/vnd.oasis.opendocument.text)
2023-08-10 09:01 UTC, Robert Großkopf
Details
screenshot (160.22 KB, image/png)
2025-05-16 17:33 UTC, BogdanB
Details
3D border of label, but original is set with no border (10.06 KB, image/png)
2025-08-06 05:34 UTC, mc
Details
Form Control and Axis Caption horked (3.54 KB, image/png)
2026-01-02 17:08 UTC, Ian Eales
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2023-08-10 09:01:14 UTC
Created attachment 188896 [details]
Controls, created in LO 7.6.0.2 - default for textboxes will always be flat border

Have a look at the attached Writer document.

If you open this document with LO 7.6.0.2 you will see all text boxes with flat border. Text boxes have been created the same way the other controls have been created. Only the text box will be created by default with flat border, all other controls will be created 3D.

Now change on of the text boxes to 3D and save the document. Close the document and reopen the document. There won't be shown 3D. It will still show flat border.

Note: If you open the saved document in an older version of LO, for example LO 7.4.7.2, it will show 3D for the text box. So the information has been saved, but won't be shown in LO 7.6.0.2

Version: 7.6.0.2 (X86_64) / LibreOffice Community
Build ID: 41d6f628ba3f046f16b5fa9fa8db8d4c2ab3b582
CPU threads: 6; OS: Linux 5.14; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 Sophie Sipasseuth 2023-08-17 09:20:06 UTC
Hello Robert,

Thank you for reporting the bug.
Unfortunately without clear steps to reproduce it, we cannot track down the origin of the problem.
Please provide a clearer set of step-by-step instructions to "change on of the text boxes to 3D".
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the steps are provided
Comment 2 Robert Großkopf 2023-08-17 09:44:42 UTC
(In reply to Sophie Sipasseuth from comment #1)
> Please provide a clearer set of step-by-step instructions to "change on of
> the text boxes to 3D".

Open the attached document.
Set Form → Design Mode
Click on the first Text Box → Right Mouse click → Control Properties
Dialog "Properties: Text Box" will open.
Move down in Folder "General" to the entry "Border" (20. Entry).
Switch from "Flat" to "3D look".
Close the dialog "Properties: Text Box".
The border of the text box will be changed to 3D.
Save the document and close the document.

Open the document again and the text box will be shown with flat border.
Comment 3 Alex Thurgood 2023-08-22 11:19:12 UTC
Confirming also with dev master build dating from before the release of 7.6rc2

Version: 24.2.0.0.alpha0+ (AARCH64) / LibreOffice Community
Build ID: 6256d5fe2e7cb1bb002d5fe59527d3a3fbf6963f
CPU threads: 8; OS: Mac OS X 13.4; UI render: Skia/Metal; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded


The change seems to work when it is made in the control properties dialog, but then on switching out of design mode, saving the document, closing, and reloading, the appearance of the control has reverted back to flat.

Confirming & regression.
Comment 4 HTK300 2023-08-23 13:13:04 UTC
confirmed as with WRITER 7.6.0.3 (X86_64) and duplicate to my bug 156697
Comment 5 raal 2023-08-23 18:32:30 UTC
This seems to have begun at the below commit in bibisect repository/OS XXXX.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 29a39b72408b7090b1c3d439dc83b54416224599 is the first bad commit
commit 29a39b72408b7090b1c3d439dc83b54416224599
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Oct 4 21:42:03 2022 +0200

    source ca46afebb7dc0ec4375e995fa90edccbed6c2530

140947: default to 'flat' instead of '3D Look' for form controls | https://gerrit.libreoffice.org/c/core/+/140947
Comment 6 Kira Tubo 2023-11-03 01:30:58 UTC
*** Bug 157970 has been marked as a duplicate of this bug. ***
Comment 7 Robert Großkopf 2023-11-03 07:50:26 UTC Comment hidden (obsolete)
Comment 8 Robert Großkopf 2023-12-15 16:39:00 UTC
*** Bug 156697 has been marked as a duplicate of this bug. ***
Comment 9 HTK300 2023-12-16 09:05:35 UTC
Hi Robert, 
just tested this behaviour with LO V24.2.0.0 beta1, but text boxes remain with its properties to revert back to flat, even I edited it as 3D, saved it, reopened the base file.

let me know If I could further test anything
Comment 10 m_a_riosv 2024-07-18 21:35:03 UTC
*** Bug 162085 has been marked as a duplicate of this bug. ***
Comment 11 Justin L 2024-10-09 19:38:55 UTC
attachment 196982 [details]: textboxControl3D.odt: one flat and one 3d text box form control created in LO 7.5.9

The difference in the ODS is that the flat control has fo:border="solid #000000" while the 3D control simply has fo:border="#000000". [I don't see any mention of what fo:border values mean in the documentation.]

There is no use of form:visual-effect (which accepts flat or 3d) - this is only used for checkboxes/radio-boxes.

comment 5's commit was replaced by 7.6/7.5.4 for tdf#152974 revert change to ORichTextModel::getPropertyDefaultByHandle

Apparently, any of these strings should be valid in order to chose flat (2) or 3d (1) or nothing (0) for the property ControlBorder
const SvXMLEnumMapEntry<sal_uInt16> aBorderTypeMap[] =
    { XML_NONE,     0 },
    { XML_HIDDEN,   0 },
    { XML_SOLID,    2 },
    { XML_DOUBLE,   2 },
    { XML_DOTTED,   2 },
    { XML_DASHED,   2 },
    { XML_GROOVE,   1 },
    { XML_RIDGE,    1 },
    { XML_INSET,    1 },
    { XML_OUTSET,   1 },

The handling code is in xmloff/source/forms/controlpropertyhdl.cxx as well as in xmloff/source/style/bordrhdl.cxx (since solid also indicates border style).
Comment 12 Commit Notification 2024-10-10 16:53:10 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5a617f77ee803eb65051e93f659ef66433879052

tdf#156707 xmloff import: always provide ControlBorder property

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 m_a_riosv 2024-11-11 22:43:58 UTC
*** Bug 163843 has been marked as a duplicate of this bug. ***
Comment 14 Robert Großkopf 2025-05-16 17:13:00 UTC
Seems this bug isn't really fixed.
Create a textbox in Writer, change border to 3d.
Save the file.
Close the file.
Reopen the file.
Border will be flat.
Comment 15 Robert Großkopf 2025-05-16 17:13:46 UTC
Forgotten:
Wrong behavior tested with
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 16 BogdanB 2025-05-16 17:33:14 UTC
Created attachment 200845 [details]
screenshot

Robert, I changed all of them to 3D, save and Reload, and just 2 of them came back as simple, all the others are ok, 3D. So, it is a bug, but not for all the controls, I don't know what is different between them.

This is how all looks after save and reload.

Version: 25.2.3.1 (X86_64) / LibreOffice Community
Build ID: d8d1af5f77df955194e52baabe19324532ac8e8b
CPU threads: 16; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 17 Robert Großkopf 2025-05-16 18:19:49 UTC
(In reply to BogdanB from comment #16)
> Created attachment 200845 [details]
> screenshot
> 
> Robert, I changed all of them to 3D, save and Reload, and just 2 of them
> came back as simple, all the others are ok, 3D. So, it is a bug, but not for
> all the controls, I don't know what is different between them.

Seems only the "Text Box" will show this buggy behavior at this moment.
Comment 18 Justin L 2025-05-16 21:47:26 UTC
Comment 12's fix handles the situation where fo:border exists, but doesn't specify 3d. It doesn't handle the situation where fo:border doesn't exist at all (or where style:graphic-properties or style:style don't exist at at all).

I don't see any precedent for how to handle an import of something that doesn't exist.

Perhaps the best solution is to always make sure that fo:border is provided. As precedent, see https://gerrit.libreoffice.org/c/core/+/113257.
Comment 19 Robert Großkopf 2025-05-17 06:14:56 UTC
(In reply to Justin L from comment #18)
> Comment 12's fix handles the situation where fo:border exists, but doesn't
> specify 3d. It doesn't handle the situation where fo:border doesn't exist at
> all (or where style:graphic-properties or style:style don't exist at at all).
> 
> I don't see any precedent for how to handle an import of something that
> doesn't exist.
> 
But: The border really should exist. You could change the border to 3d, could see the changing in the document, could save. And when reopening the form the border for text boxes will switch back to flat border.

Seems the border for text boxes won't be saved.
Comment 20 Justin L 2025-05-17 11:12:11 UTC
(In reply to Robert Großkopf from comment #19)
> But: The border really should exist.
Sure: the only question is "how to do it (properly)".
Comment 21 Justin L 2025-05-20 13:29:47 UTC
Mentioned in comment 11, but let me spell it out a bit more clearly...

Comment 5's identified commit was reverted/replaced by
commit 63b8e8bda29efbdde0e0bd7f7d2b18d5a9b7b135
Author: Caolán McNamara on Mon May 8 09:35:20 2023 +0100
    tdf#152974 revert change to ORichTextModel::getPropertyDefaultByHandle
which now changes the richTextControl CTOR to default with a flat border (for the purpose of better matching PDF/Print output).
Comment 22 Justin L 2025-05-21 14:32:09 UTC
Similar precedent seems to be set in libreoffice/xmloff/source/text/txtstyli.cxx

Proposed patch at https://gerrit.libreoffice.org/c/core/+/185619
Comment 23 Commit Notification 2025-05-22 06:39:39 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4dad2e181fd2dc30c3916fd59c05745023a51c8

tdf#156707 xmloff import: always provide ControlBorder property #2

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2025-05-28 07:29:26 UTC Comment hidden (obsolete, reverted)
Comment 25 Justin L 2025-07-10 14:40:15 UTC
Arggh: bug 167358 shows that labels don't show any border if there is no fo:border specified. So I need to revert everything...

Perhaps Caolán's 7.5 change should be reverted also? (From what I can tell, the reason for the change was so that PDF export matched what the screen showed, but that doesn't seem like a good enough justification for all the trouble this is causing...)
Comment 26 Commit Notification 2025-07-11 11:46:18 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0ad0fc985cc4b1c8f05df1e64752ae045127c051

tdf#167358 Revert "tdf#156707 xmloff import: always provide ControlBorder

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 Commit Notification 2025-07-12 08:46:21 UTC Comment hidden (obsolete, reverted)
Comment 28 Commit Notification 2025-07-12 08:46:27 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/22fc7d629e4c2c43e4ed296fcabe27b5b97e65e0

tdf#167358 Revert "tdf#156707 xmloff import: always provide ControlBorder

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 mc 2025-08-06 05:31:21 UTC
A similar problem also occurred with Base forms; the original setting for field labels was with a border without a frame. Now, when opening the database with the new version 25.2.5, all labels are set with a 3D border. Even when re-entering the Borderless setting, the labels remain 3D.

Problematic in :
Version: 25.2.5.2 (X86_64) / LibreOffice Community
Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: CL threaded


ok with versione 25.2.4
Comment 30 mc 2025-08-06 05:34:48 UTC
Created attachment 202205 [details]
3D border of label, but original is set with no border
Comment 31 Robert Großkopf 2025-08-06 05:50:59 UTC
(In reply to mc from comment #29)
> A similar problem also occurred with Base forms; the original setting for
> field labels was with a border without a frame. Now, when opening the
> database with the new version 25.2.5, all labels are set with a 3D border.
> Even when re-entering the Borderless setting, the labels remain 3D.
> 
> Problematic in :
> Version: 25.2.5.2 (X86_64) / LibreOffice Community
> Build ID: 03d19516eb2e1dd5d4ccd751a0d6f35f35e08022
> CPU threads: 12; OS: Windows 11 X86_64 (10.0 build 26100); UI render:
> Skia/Vulkan; VCL: win
> Locale: it-IT (it_IT); UI: it-IT
> Calc: CL threaded
> 
> 
> ok with versione 25.2.4

Already fixed with
https://bugs.documentfoundation.org/show_bug.cgi?id=167358

Has nothing to do with this bug.
Comment 32 HTK300 2025-11-25 16:11:51 UTC
with version 25.8.3.2 in Windows 10 the problem with borders in forms created in 3D reverts back to flat borders at reopening of odb file has returned ... a regression.
Comment 33 Robert Großkopf 2025-11-25 19:18:00 UTC
3D-border for text control work well up to LO 24.2.4.3. With version 24.2.5.2 there appear another bug with 3D-borders around the label controls. This bug has been fixed and again the text controls won't save 3D-border.

Tested here with LO 25.8.0.4: 3D-border won't be saved. Same with current version LO 25.8.3.2.
Comment 34 Ian Eales 2026-01-02 17:03:40 UTC
Version: 25.8.4.2 (X86_64)
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Control border 3d with no way to change
Chart Axis Caption reverts to 0° from 90°
Comment 35 Ian Eales 2026-01-02 17:08:11 UTC
Created attachment 204905 [details]
Form Control and Axis Caption horked

There is no way to edit the control border

Frame is grayed out in Form Properties

As an aside, IMO, it's a REALY DUMB idea to change default properties on existing items. This change busted an eight year old workbook.
Comment 36 Caolán McNamara 2026-02-28 21:20:47 UTC
Having another go at this
Comment 37 Commit Notification 2026-03-01 19:16:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae6ce55091b063eb8bd695ab25ea28fc053d9ece

tdf#156707 always write fo:border for form control shapes on export

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 38 Caolán McNamara 2026-03-01 19:19:32 UTC
Lets not rush to backport this until its had some exposure to the real world