include/xmloff/xmlimppr.hxx
@@ -113,9 +113,8 @@ public:
             const SvXMLNamespaceMap& rNamespaceMap ) const;
 
     /** This method is called when all attributes have benn processed. It may be used to remove items that are incomplete */
-    virtual void finished(
-            ::std::vector< XMLPropertyState >& rProperties,
-            sal_Int32 nStartIndex, sal_Int32 nEndIndex ) const;
+    virtual void finished(std::vector<XMLPropertyState>& rProperties, sal_Int32 nStartIndex,
+                          sal_Int32 nEndIndex, const sal_uInt32 nPropType) const;
 
     void CheckSpecialContext(
             const ::std::vector< XMLPropertyState >& rProperties,
