xmloff/source/chart/PropertyMaps.cxx
@@ -1050,7 +1050,9 @@ bool XMLChartImportPropertyMapper::handleSpecialItem(
     return bRet;
 }
 
-void XMLChartImportPropertyMapper::finished( ::std::vector< XMLPropertyState >& /*rProperties*/, sal_Int32 /*nStartIndex*/, sal_Int32 /*nEndIndex*/ ) const
+void XMLChartImportPropertyMapper::finished(std::vector<XMLPropertyState>& /*rProperties*/,
+                                            sal_Int32 /*nStartIndex*/, sal_Int32 /*nEndIndex*/,
+                                            const sal_uInt32 /*nPropMap*/) const
 {
 }
 
